[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/newEnemy/NewEnemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/newEnemy/EnemyExplosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/DamageNumber.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/adventurerPlayer/HealthManager.gd" type="Script" id=4]
[ext_resource path="res://scenes/newEnemy/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Attack.png" type="Texture" id=6]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Hit.png" type="Texture" id=7]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Idle.png" type="Texture" id=8]
[ext_resource path="res://sprites/Enemies/Skeleton/Skeleton Walk.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 12 )

[sub_resource type="Animation" id=10]
resource_name = "Attack"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ ExtResource( 6 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 18, 18 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 17 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5.5, -2.5 ), Vector2( 5.5, -2.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitArea/HitShape:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 7.56838, 5 ), Vector2( 7.56838, 5 ), Vector2( 7.56838, 5 ), Vector2( 27, 22 ), Vector2( 27, 13 ), Vector2( 15, 9 ), Vector2( 12, 7 ), Vector2( 12, 7 ), Vector2( 12, 7 ), Vector2( 12, 7 ), Vector2( 12, 7 ), Vector2( 8, 4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitArea/HitShape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 6, -11 ), Vector2( -10, -17 ), Vector2( -11, -14 ), Vector2( 10, -4 ), Vector2( 12, 3 ), Vector2( 22, 9 ), Vector2( 27, 11 ), Vector2( 25, 8 ), Vector2( 20, 2 ), Vector2( 13, -9 ), Vector2( 6, -10 ), Vector2( 6, -12 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("StateMachine")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "setAreaDamage"
}, {
"args": [ false ],
"method": "setAreaDamage"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ ExtResource( 7 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 0 ), Vector2( -4, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 11, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ ExtResource( 8 ), ExtResource( 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ ExtResource( 9 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 13, 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -0.5 ), Vector2( 1, -0.5 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 14 )

[sub_resource type="CircleShape2D" id=13]
radius = 150.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7.56838, 5 )

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 16.0 ],
"_edit_vertical_guides_": [ 4.0 ]
}
enemyDeath = ExtResource( 2 )
damageNumber = ExtResource( 3 )

[node name="HealthManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.5, -2.5 )
texture = ExtResource( 6 )
hframes = 18
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 10 )
anims/Hurt = SubResource( 11 )
anims/Idle = SubResource( 12 )
anims/Run = SubResource( 4 )

[node name="AttackArea" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 4, 2 )
shape = SubResource( 9 )

[node name="MoveAreaTarget" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveAreaTarget"]
position = Vector2( -1, -2 )
shape = SubResource( 13 )

[node name="HitArea" type="Area2D" parent="."]
editor/display_folded = true

[node name="HitShape" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -10, -17 )
shape = SubResource( 8 )

[connection signal="healthChanged" from="HealthManager" to="." method="_on_HealthManager_healthChanged"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="StateMachine" method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="StateMachine" method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="MoveAreaTarget" to="StateMachine" method="_on_MoveAreaTarget_body_entered"]
[connection signal="body_exited" from="MoveAreaTarget" to="StateMachine" method="_on_MoveAreaTarget_body_exited"]
[connection signal="body_entered" from="HitArea" to="StateMachine" method="_on_HitArea_body_entered"]
